# kodon-py

./: .gitignore  README.md  pyproject.toml
annotated_xml/: tlg0011.tlg001.perseus-grc2.perseus6.xml  tlg0057.tlg111.verbatim-grc1.perseus6.xml
docs/: Perseus-6_Planning.md
src/kodon_py/: cli.py  config.py  database.py  ingestion.py  server.py  tei_parser.py  urn_utils.py
src/kodon_py/migrations/: 0001_init.py
src/kodon_py/pipeline/: __init__.py  document.py  pipeline.py  protocols.py
src/kodon_py/pipeline/sources/: json_source.py  noop_resolver.py
src/kodon_py/pipeline/stages/: commentary.py  cross_reference.py  morphology.py  tei_reader.py  writers.py
src/kodon_py/static/: output.css
src/kodon_py/templates/: base.html.jinja
src/kodon_py/templates/components/: ReadingEnvironment.html.jinja
tei_json/: tlg0011.tlg001.perseus-grc2.json  tlg0011.tlg001.perseus-grc2.metadata.json  tlg0057.tlg111.verbatim-grc1.json  tlg0057.tlg111.verbatim-grc1.metadata.json
test_tei/: tlg0057.tlg111.verbatim-grc1.xml
tests/: conftest.py  test_pipeline.py  test_server.py  test_urn_decomposition.py  test_urn_utils.py
